--- a/dz.html
+++ b/dz.html
@@ -84,7 +84,7 @@
         <div class="u-clearfix u-custom-html u-custom-html-1">
           <center> <h2 class="nb">Дз классные работы</h2>
             <div class="border" data-aos="flip-down">
-<h5> <a href="11 февраля.html" class="nb">Дз на 11 февраля Математика Литература Обществознание Русский <b>ИЗО</b></a></h5>	      
+<h5> <a href="11 февраля.html" class="nb">Дз на 11 февраля Математика Литература Обществознание Русский</a></h5>	      
             
             	    		
 		     <h5> <a href="10 февраляя.html" class="nb">Дз на 10 февраля Математика Литература Английский</a></h5>
